rails new meme-economy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://i.pinimg.com/originals/86/1a/b9/861ab971a300f7d42d60b72621cf03f3.jpg);">
+  <div class="container">
+    <h1>Meme-Economy brings <strong>Dank</strong> to <strong>top tire memes</strong>!</h1>
+    <p>Shit post and change your life</p>
+    <%= link_to "Login", new_user_session_path, class: "btn  btn-success" %>
+  </div>
+</div>
